target_os = "win"
target_cpu = "x64"
is_official_build = true
is_debug = false
clang_win = false
skia_enable_ganesh = true
skia_enable_gpu = true
skia_use_gl = true
skia_use_egl = false
skia_use_vulkan = false
skia_use_metal = false
skia_use_dawn = false
skia_use_direct3d = false
skia_enable_fontmgr_empty = false
skia_enable_fontmgr_win = false
skia_enable_fontmgr_win_gdi = false
skia_use_icu = false
skia_use_libpng_decode = true
skia_use_libjpeg_turbo_decode = true
skia_use_libwebp_decode = true
skia_use_libpng_encode = false
skia_use_libjpeg_turbo_encode = false
skia_use_libwebp_encode = false
skia_use_zlib = true
skia_enable_svg = true
skia_enable_pdf = false
skia_use_xps = false
skia_use_expat = true
skia_use_system_expat = false
skia_use_wuffs = false
skia_enable_vulkan_debug_layers = false
skia_use_spirv_validation = false
skia_use_zlib = true
skia_use_system_zlib = false
skia_use_system_libpng = false
skia_use_system_libjpeg = false
skia_use_system_libjpeg_turbo = false
skia_use_system_libwebp = false
skia_use_system_zlib = false
skia_use_system_icu = false
skia_enable_fontmgr_win_gdi = true
skia_use_directwrite = false
skia_use_dwrite = false
ar = "x86_64-w64-mingw32-ar"
cc = "x86_64-w64-mingw32-gcc"
cxx = "x86_64-w64-mingw32-g++"
rc = "x86_64-w64-mingw32-windres"
extra_cflags = [
  "-O3",
  "-DSK_DISABLE_LEGACY_PNG_WRITEBUFFER",
  "-D__forceinline=inline",
]
